# game_v3x

./: CMakeLists.txt  README.md
cmake/: generate_version.sh
hw/mold/: button_all.ipt  pannel.ipt  screen.ipt  shell.ipt  shell_panel.ipt
script/: app_start_entry.sh  ota.sh
src/: CMakeLists.txt  gui.c  gui_calendar.c  gui_calendar.h  gui_common.h  gui_file_explorer.c  gui_homepage.c  gui_homepage.h  main.c  main.h
src/nes/: font_data.c  font_data.h  nes_apu.c  nes_apu.h  nes_common.h  nes_crc32.c  nes_main.c  nes_main.h  nes_mapper.c  nes_mapper.h  nes_ppu.c  nes_ppu.h
sys/lib/: libasound.la  libasound.so.2.0.0  libavformat.so.58.76.100  libavutil.so.56.70.100  libcrypto.so.1.1  libdrm.so.2.4.0  libevdev.so.2.3.0  libinput.so.10.13.0  libmtdev.la  libmtdev.so.1.0.0  libssl.so.1.1  libswresample.so.3.9.100  libswscale.so.5.9.100  libudev.so.1.6.3  libz.so.1.2.11
